# blab-chatbot-interpreter

./: .gitignore  README.md  pyproject.toml  run.py  settings_interpreter_template.py
docs/: sequence_diagram.md
src/blab_chatbot_interpreter/: __main__.py  conversation_interpreter.py  data_structures.py  interpreter_settings_format.py
